# pyproject-template

./: .pylintrc  Makefile  README.md  pyproject.toml
doc/: conf.py  index.rst
scripts/: convtmpl.py
